# ThePlan

./: README.md  bintree.cpp  bsdlist.c  intlist.c  minmaxarray.c  perm.cpp  qsort.cpp  rectintersect.c  remdups.c  reversearray.c  rotatearray.c  rotategrid.c  shiftarray.c  zeros2end.c
KR/: 2.5.c  2.7.c
KR/ch01/: 1.10.c  1.12.c  1.5.4-KR.c  1.5.4.c  1.7  1.7.c  test.txt
KR/scratch/: 1.8.c  outfile.txt  test.c  wordcount.c  wordperline.c
cpp/: binarytree.h  bintree_test.h  clean.bat  common.h  heap_sort.h  insertion_sort.h  main.cpp  merge_sort.h  sort.h
gtest/: CMakeLists.txt  README  array.cpp  bsdlist.cpp  files.cpp  gtests.cpp  krtest.cpp  test.h
libconformance/: CMakeLists.txt  CMakeLists.txt.raspberry.pi  CTestTestfile.cmake  assert-h.cpp  libconf.cpp
opentable/: README.md  algo.c  algo.h  common.h  functor.c  functor.h  harness.h  main.c  makefile  newerhash.txt  oldinthash.txt  open_table.c  open_table.h  report.txt
queue_h/: main.c
rust_projects/KandR/: Cargo.toml
rust_projects/KandR/src/: main.rs
rust_projects/dekker/src/: main.rs
rust_projects/inorder_vowels/: Cargo.toml  btree_no_comments.h
rust_projects/inorder_vowels/src/: main.rs
rust_projects/linkedlist/src/: main.rs
rust_projects/minmax/: Cargo.toml
rust_projects/minmax/src/: main.rs
rust_projects/minmax/subindexsum/: Cargo.toml
rust_projects/queue_h/: Cargo.toml
rust_projects/queue_h/src/: main.rs
rust_projects/rust_book/box_type/: Cargo.toml
rust_projects/rust_book/fearless/: Cargo.toml
single_projects/dictionary/: main.cpp
single_projects/sedgewick/: clean.bat
(+15 files in other folders)
